# CMakeList.txt: homework-2024a 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#

# 将源代码添加到此项目的可执行文件。

add_executable (level1 "./level1/p01")
add_executable (level1 "./level1/p02")
add_executable (level1 "./level1/p03")
add_executable (level1 "./level1/p04")
add_executable (level1 "./level1/p05")
add_executable (level1 "./level1/p06")
add_executable (level1 "./level1/p07")
add_executable (level1 "./level1/p08")
add_executable (level1 "./level1/p09")
add_executable (level1 "./level1/p10")


# TODO: 如有需要，请添加测试并安装目标。
