

add_executable (p01 "./level1/p01/p01.cpp")
add_executable (p02 "./level1/p02/p02.cpp")
add_executable (p03 "./level1/p03/p03.cpp")
add_executable (p04 "./level1/p04/p04.cpp")
add_executable (p05 "./level1/p05/p05.cpp")
add_executable (p06 "./level1/p06/p06.cpp")
add_executable (p07 "./level1/p07/p07.cpp")
add_executable (p08 "./level1/p08/p08.cpp")
add_executable (p09 "./level1/p09/p09.cpp")
add_executable (p10 "./level1/p10/p10.cpp")

